# ktvlv

./: .gitignore  C++架构设计-页面管理系统.md  C++编码规范与避坑指南.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  F133_KTV移植方案总结.md  HTTP_REST_API客户端设计.md  LVGL初始化顺序修复-最终版.md  Licence许可证管理系统设计.md  MVP版本UI设计说明.md  README.md  SDK模块开发指南_Linux_Audio_开发指南_extracted.txt  SDK模块开发指南_Linux_Audio_开发指南_keywords.txt  SDK模块开发指南_Linux_Display_开发指南_extracted.txt  SDK模块开发指南_Linux_Display_开发指南_keywords.txt  SDK模块开发指南_Linux_VE_开发指南_extracted.txt  SDK模块开发指南_Linux_VE_开发指南_keywords.txt  SDL仿真最佳实践与避坑指南.md  UI初始化顺序修复说明.md  Windows构建指南.md  build.ps1  build_exe.bat  build_fast.bat  build_nt.bat  build_temp.bat  build_vs.cmd  config.ini  ktvlv标准初始化模板.md  lv-drivers.pc.in  lv_conf.h  lv_drv_conf.h  rebuild_clean.bat  run_cmake.bat  代码Review报告.md  代码重构总结.md  修复说明.md  基础组件开发指南_Tina_Linux_各平台多媒体格式_支持列表_extracted.txt  基础组件开发指南_Tina_Linux_各平台多媒体格式_支持列表_keywords.txt  基础组件开发指南_Tina_Linux_图形系统_开发指南_extracted.txt  (+30 more)
build_ninja/: CMakeCache.txt
build_ninja2/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  config.ini  debug_config_response.json  debug_response.json  debug_token_response.json  ktvlv.exp
build_ninja2/cache/: songs_page_1_size_20.json
core/: app_main.c  app_main.h
docs/: ALSA说明.md  Cursor实现提示模板.md  Cursor开发指南.md  Cursor开发脚手架提示.md  F133平台库清单.md  F133第一期需求文档.md  KTVLV技术基座（F133_Tina）.md  Linux录音实现说明.md  MVP版本功能清单.md  MVP版本需求整理（最终版）.md  MVP阶段不需要的选型与文档清单.md  README.md  UI最佳实践指南.md  VIP会员与微信扫码功能设计.md  WebSocket长连接实现方案.md  src代码review报告.md  std_queue到RingBuffer迁移指南.md  代码审查Checklist.md  团队开发规范v1.md  文档一致性检查报告.md  文档一致性检查报告（最新）.md  文档一致性检查报告（最终版）.md  文档一致性检查报告（输入法合并后）.md  文档整理总结（最终版）.md  文档索引.md  服务层API设计文档.md  架构成熟度评估与包装原则.md  消息队列完整指南.md  消息队列实现与最佳实践.md  线程架构基线（最终版）.md  语音点歌与唱歌打分功能设计.md  资源管理规范v1.md  项目架构图（1页版）.md  项目架构图（完整版）.md  项目脚手架结构.md
docs/api/: 服务器API_LIST.md
docs/architecture/: AppRuntime线程生命周期总控设计.md  C++架构设计-预分配内存版本.md  MVP版本UI设计说明.md  Watchdog决策模型与故障分级.md  事件架构规范.md  并发架构总结构（最终版）.md  应用启动阶段划分与退出原则.md  异常态处理总则.md  线程与消息队列架构设计总稿.md  线程架构方案评估.md  项目架构设计总览.md
docs/design/: HTTP_REST_API客户端设计.md  M3u8下载与本地存储设计.md  历史记录SQLite实现设计.md  线程与事件系统设计.md  输入法架构设计（定版）.md  输入设备与交互设计.md
docs/fixes/: LVGL初始化顺序修复-最终版.md  UI初始化顺序修复说明.md  Windows_SEH异常修复说明.md  修复历史记录.md  修复说明.md  黑屏问题修复总结.md
docs/guides/: Android_Web背景工程师C++开发指南.md  C++接口与命名规范（定版）.md  C++编码规范与避坑指南.md  JSON解析编码规范.md  KTV_App线程Singleton编码规范（最终版）.md  KTV日志系统完整指南.md  KTV日志规范.md  LogUploadService设计.md  NetworkService与libcurl实现指南（MVP可落地版）.md  PM一页纸作战手册（每日5分钟）.md  PM代码评审Checklist（3秒检查法）.md  SDL仿真最佳实践与避坑指南.md  Singleton清单（Android风格最终版）.md  Tina_KTV_MVP产品与技术协作规范v1.0.md  Tina_KTV项目10条铁律（贴墙版）.md  Utils工具类使用指南.md  ktvlv标准初始化模板.md  logread抓取与上传实现示例.md  事件模型MVP实现指南（可落地版）.md  代码目录结构等于模块责任结构（定版）.md  工程师入场须知（第一天必读）.md  工程规范与避坑指南（定版）.md  工程规范完整指南（量产级）.md  工程规范硬规则（量产级）.md  应用层命名规范（架构约束版）.md  应用层库使用规范（量产级）.md  开源库选型指南.md  执行清单（每日必查）.md  日志子系统设计说明.md  最小模板包（可直接拷贝）.md  标准线程模板与实现指南.md  模块责任表（RACI最终版）.md  消息队列选型技术决策.md  目录分工标注（定版）.md  线程Singleton白名单与实现规范.md  线程与Singleton白名单（工程Review版）.md
docs/reviews/: CODE_REVIEW.md
docs/sdk/: ALSA说明.md  F133_KTV移植方案总结.md  F133平台库清单.md  F133第一期需求文档.md  KTVLV技术基座（F133_Tina）.md  KTV_App稳定性与自愈设计说明.md  ktvlv标准初始化模板.md
drivers/: README.md  audio_driver.h  display_driver.h  input_driver.h
platform/: ARCHITECTURE_SUMMARY.md  CMakeLists_platform_example.cmake  MIGRATION_GUIDE.md  README.md  example_main.cpp  platform_config.h
platform/f133_linux/: audio_alsa.c  display_fbdev.c  input_evdev.c  input_evdev.h
platform/windows_sdl/: audio_stub.c  display_sdl.c  input_sdl.c
src/: main.cpp
src/config/: config.cpp  config.h
src/core/: thread_base.h  worker_thread.h  worker_thread_example.h
src/events/: event_bus.cpp  event_bus.h  event_types.h
src/logging/: logger.cpp  logger.h
src/player/: player_adapter.cpp  player_adapter.h  player_cmd.h  player_cmd_queue.cpp  player_cmd_queue.h  player_event.h  ui_dispatcher.cpp  ui_dispatcher.h  ui_event_queue.h
src/sdl/: sdl.cpp  sdl.h
src/services/: cache_service.cpp  cache_service.h  history_db_service.cpp  history_db_service.h  history_service.cpp  history_service.h  http_service.cpp  http_service.h  licence_service.cpp  licence_service.h  log_upload_service.cpp  log_upload_service.h  m3u8_download_service.cpp  m3u8_download_service.h  mock_data.cpp  mock_data.h  player_service.cpp  player_service.h  queue_service.cpp  queue_service.h  song_service.cpp  song_service.h  task_service.cpp  task_service.h
src/ui/: components.cpp  components.h  focus_manager.cpp  focus_manager.h  layouts.cpp  layouts.h  page_lifecycle.cpp  page_lifecycle.h  page_manager.cpp  page_manager.h  ui_scale.cpp  ui_scale.h
src/utils/: json_helper.cpp  json_helper.h  log_macros.h  out_value.h  sqlite_helper.cpp  sqlite_helper.h
设计稿/: homepage.html
